[gd_scene load_steps=2 format=2]

[ext_resource path="res://InterfacesYEstructurasDeControl.gd" type="Script" id=1]

[node name="InterfacesYEstructurasDeControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HSplit" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 10

[node name="Result" type="ColorRect" parent="HSplit"]
margin_right = 260.0
margin_bottom = 300.0
size_flags_horizontal = 3

[node name="Center" type="CenterContainer" parent="HSplit/Result"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -150.0
margin_right = 130.0
margin_bottom = 150.0

[node name="OK" type="Label" parent="HSplit/Result/Center"]
visible = false
margin_left = 116.0
margin_top = 143.0
margin_right = 143.0
margin_bottom = 157.0
custom_colors/font_color = Color( 0.0745098, 0.772549, 0.215686, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "[OK]"

[node name="Entry" type="ColorRect" parent="HSplit"]
margin_left = 272.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 3
color = Color( 0.129412, 0.364706, 0.639216, 1 )

[node name="Center" type="CenterContainer" parent="HSplit/Entry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -150.0
margin_right = 120.0
margin_bottom = 150.0

[node name="VBox" type="VBoxContainer" parent="HSplit/Entry/Center"]
margin_left = 70.0
margin_top = 112.0
margin_right = 170.0
margin_bottom = 188.0
rect_min_size = Vector2( 100, 0 )
alignment = 1

[node name="User" type="LineEdit" parent="HSplit/Entry/Center/VBox"]
margin_right = 100.0
margin_bottom = 24.0
placeholder_text = "User"

[node name="Password" type="LineEdit" parent="HSplit/Entry/Center/VBox"]
margin_top = 28.0
margin_right = 100.0
margin_bottom = 52.0
secret = true
placeholder_text = "Password"

[node name="Ok" type="Button" parent="HSplit/Entry/Center/VBox"]
margin_top = 56.0
margin_right = 100.0
margin_bottom = 76.0
text = "Join"

[connection signal="text_changed" from="HSplit/Entry/Center/VBox/User" to="." method="_on_User_text_changed"]
[connection signal="text_changed" from="HSplit/Entry/Center/VBox/Password" to="." method="_on_Password_text_changed"]
[connection signal="pressed" from="HSplit/Entry/Center/VBox/Ok" to="." method="_on_Ok_pressed"]
